fix: top device mockup z-index

--- a/src/components/ui/IphoneXMockup/IphoneXMockup.module.scss
+++ b/src/components/ui/IphoneXMockup/IphoneXMockup.module.scss
@@ -98,6 +98,7 @@ $width: 300px;
       width: $width;
       margin-top: -10px;
       margin-bottom: 20px;
+      z-index: 999;
 
       &:before,
       &:after {
@@ -105,7 +106,6 @@ $width: 300px;
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
-        z-index: 1;
       }
 
       // frontal camera/speaker frame
